--- a/package.json
+++ b/package.json
@@ -12,19 +12,22 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "bootstrap-icons": "^1.9.1",
+    "clk-styletest": "^2.0.6",
     "lit": "latest",
     "tslib": "^2.2.0"
   },
   "devDependencies": {
     "@rollup/plugin-node-resolve": "^11.2.1",
+    "@types/bootstrap": "^5.2.2",
     "@web/dev-server": "^0.1.17",
-    "node-sass": "^5.0.0",
+    "autoprefixer": "^10.4.8",
     "postcss": "^8.2.13",
     "rollup": "^2.46.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-postcss-lit": "^1.0.1",
     "rollup-plugin-typescript2": "^0.30.0",
-    "sass": "^1.32.12",
+    "sass": "^1.54.4",
     "typescript": "^4.2.4"
   }
 }
