--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "dev": "npm run build:watch & npm run serve",
     "serve": "wds --watch --open",
     "test": "rm -rf test-outdir && rollup --c rollup.test.config.js && web-test-runner",
-    "storybook": "start-storybook -p 6006 --no-manager-cache"
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "",
   "license": "MIT",
@@ -22,9 +23,17 @@
     "tslib": "^2.2.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.18.13",
     "@esm-bundle/chai": "^4.3.4-fix.0",
     "@open-wc/testing": "^3.0.0-next.5",
     "@rollup/plugin-node-resolve": "^11.2.1",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/preset-scss": "^1.0.3",
+    "@storybook/web-components": "^6.5.10",
     "@types/bootstrap": "^5.2.2",
     "@web/dev-server": "^0.1.17",
     "@web/dev-server-esbuild": "^0.3.2",
@@ -32,13 +41,16 @@
     "@web/dev-server-storybook": "^0.5.4",
     "@web/test-runner": "^0.14.0",
     "autoprefixer": "^10.4.8",
+    "babel-loader": "^8.2.5",
     "esbuild-sass-plugin": "^2.3.2",
+    "lit-html": "^2.3.1",
     "postcss": "^8.2.13",
     "rollup": "^2.46.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-postcss-lit": "^1.0.1",
     "rollup-plugin-typescript2": "^0.30.0",
     "sass": "^1.54.4",
+    "sass-loader": "^13.0.2",
     "typescript": "^4.2.4"
   }
 }
