setup storybook complete

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,7 +11,8 @@
     "skipLibCheck": true,
     "noImplicitAny": false,
     "importHelpers": true,
-    "rootDir": "src"
+    "rootDir": "src",
+    "useDefineForClassFields": false
   },
   "include": [
     "**/*.ts",
