--- a/package.json
+++ b/package.json
@@ -11,24 +11,27 @@
     "dev": "npm run build:watch & npm run serve",
     "serve": "wds --watch --open",
     "test": "rm -rf test-outdir && rollup --c rollup.test.config.js && web-test-runner",
-    "storybook": "start-storybook -p 6006",
+    "storybook": "npm run build && start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
   "author": "",
   "license": "MIT",
   "dependencies": {
     "bootstrap-icons": "^1.9.1",
-    "clk-styletest": "^2.0.6",
+    "clk-styletest": "^2.0.7",
     "lit": "^2.3.1",
     "tslib": "^2.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
     "@esm-bundle/chai": "^4.3.4-fix.0",
+    "@open-wc/storybook": "^0.2.8",
     "@open-wc/testing": "^3.0.0-next.5",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-docs": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
+    "@storybook/addon-knobs": "^6.4.0",
     "@storybook/addon-links": "^6.5.10",
     "@storybook/builder-webpack5": "^6.5.10",
     "@storybook/manager-webpack5": "^6.5.10",
@@ -51,6 +54,7 @@
     "rollup-plugin-typescript2": "^0.30.0",
     "sass": "^1.54.4",
     "sass-loader": "^13.0.2",
+    "storybook-addon-web-components-knobs": "^0.3.20",
     "typescript": "^4.2.4"
   }
 }
