--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "lit-sass-ts-starter",
+  "name": "@govtechsg/sgds-web-component",
   "version": "0.0.1",
   "description": "",
   "main": "lib/umd/index.js",
@@ -10,7 +10,7 @@
     "build:watch": "npm run build -- --watch",
     "dev": "npm run build:watch & npm run serve",
     "serve": "wds --watch --open",
-    "test": "rm -rf test-outdir && rollup --c rollup.test.config.js && web-test-runner",
+    "test": "rm -rf test-outdir && rollup --config rollup.test.config.js && web-test-runner",
     "storybook": "npm run build && start-storybook -p 6006",
     "build-storybook": "build-storybook"
   },
