--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
   "dependencies": {
     "bootstrap-icons": "^1.9.1",
     "clk-styletest": "^2.0.7",
-    "lit": "^2.3.1",
-    "tslib": "^2.2.0"
+    "lit": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
@@ -51,10 +50,11 @@
     "rollup": "^2.46.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-postcss-lit": "^1.0.1",
-    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-typescript2": "^0.33.0",
     "sass": "^1.54.4",
     "sass-loader": "^13.0.2",
     "storybook-addon-web-components-knobs": "^0.3.20",
+    "tslib": "^2.4.0",
     "typescript": "^4.2.4"
   }
 }
