chore(rollup): configure subpath imports

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "moduleResolution": "node",
     "lib": ["es2017", "dom", "dom.iterable"],
     "declaration": true,
+    "declarationDir": "lib",
     "sourceMap": true,
     "inlineSources": true,
     "experimentalDecorators": true,
