--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "lit-html": "^2.3.1",
     "postcss": "^8.2.13",
     "rollup": "^2.46.0",
+    "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-postcss-lit": "^1.0.1",
     "rollup-plugin-typescript2": "^0.33.0",
