--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   "typings": "lib/index.d.ts",
   "scripts": {
     "build": "rm -rf lib && rollup --config rollup.config.js",
+    "post:build": "node ./scripts/frankBuild.js",
+    "build:lib": "npm run build && npm run post:build", 
     "build:watch": "npm run build -- --watch",
     "dev": "npm run build:watch & npm run serve",
     "serve": "wds --watch --open",
