--- a/.github/workflows/publish-pr.yml
+++ b/.github/workflows/publish-pr.yml
@@ -18,8 +18,8 @@ jobs:
           node-version: 14
           registry-url: 'https://registry.npmjs.org'
       - run: npm ci
-      - run: npm run ci:test
-      - run: npm run build
+      - run: npm run test
+      - run: npm run build:lib
       - run: npm publish --tag alpha ./lib
         if: contains(env.NPM_TAG, 'alpha')
       - run: npm publish --tag beta ./lib
