--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "bootstrap": "^5.2.0",
+    "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.9.1",
     "clk-styletest": "^2.0.9",
     "lit": "^2.3.1"
@@ -33,6 +33,7 @@
     "@open-wc/storybook": "^0.2.8",
     "@open-wc/testing": "^3.0.0-next.5",
     "@rollup/plugin-node-resolve": "^11.2.1",
+    "@shoelace-style/shoelace": "^2.0.0-beta.83",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-docs": "^6.5.10",
     "@storybook/addon-essentials": "^6.5.10",
@@ -42,7 +43,7 @@
     "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/preset-scss": "^1.0.3",
     "@storybook/web-components": "^6.5.10",
-    "@types/bootstrap": "^5.2.2",
+    "@types/bootstrap": "^5.2.4",
     "@web/dev-server": "^0.1.17",
     "@web/dev-server-esbuild": "^0.3.2",
     "@web/dev-server-rollup": "^0.3.19",
