--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
+    "@govtechsg/sgds": "^2.1.0-beta.1",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.9.1",
     "clk-styletest": "^2.0.9",
