--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@govtechsg/sgds": "^2.1.0-beta.1",
+    "@lit-labs/observers": "^1.0.2",
     "bootstrap": "^5.1.3",
     "bootstrap-icons": "^1.9.1",
     "clk-styletest": "^2.0.9",
