build(react): configure react builds with custom el analyzer and scripts

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@babel/core": "^7.18.13",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
+    "@custom-elements-manifest/analyzer": "^0.6.4",
     "@esm-bundle/chai": "^4.3.4-fix.0",
     "@open-wc/storybook": "^0.2.8",
     "@open-wc/testing": "^3.0.0-next.5",
@@ -56,6 +57,7 @@
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "cz-conventional-changelog": "^3.3.0",
+    "del": "^7.0.0",
     "esbuild-sass-plugin": "^2.3.2",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
