--- a/.github/workflows/publish-latest.yml
+++ b/.github/workflows/publish-latest.yml
@@ -2,8 +2,10 @@ name: Publish Latest
 
 on:
   push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+'
+    branch:
+      - 'react-generator'
+    # tags:
+    #   - 'v[0-9]+.[0-9]+.[0-9]+'
 
 jobs:
   publish:    
