--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@govtechsg/sgds": "^2.1.0-beta.2",
+    "@govtechsg/sgds": "^2.1.1",
     "bootstrap": "^5.1.3",
     "lit": "^2.3.1"
   },
