--- a/package.json
+++ b/package.json
@@ -20,55 +20,55 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@govtechsg/sgds": "^2.1.0-beta.2",
-    "bootstrap": "^5.1.3",
-    "lit": "^2.3.1"
+    "@govtechsg/sgds": "^2.1.1",
+    "bootstrap": "^5.2.3",
+    "lit": "^2.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.18.13",
-    "@commitlint/cli": "^17.1.2",
-    "@commitlint/config-conventional": "^17.1.0",
+    "@babel/core": "^7.20.5",
+    "@commitlint/cli": "^17.3.0",
+    "@commitlint/config-conventional": "^17.3.0",
     "@esm-bundle/chai": "^4.3.4-fix.0",
     "@open-wc/storybook": "^0.2.8",
-    "@open-wc/testing": "^3.0.0-next.5",
-    "@playwright/test": "^1.27.0",
-    "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-replace": "^5.0.0",
-    "@shoelace-style/shoelace": "^2.0.0-beta.83",
-    "@storybook/addon-actions": "^6.5.10",
-    "@storybook/addon-docs": "^6.5.10",
-    "@storybook/addon-essentials": "^6.5.10",
+    "@open-wc/testing": "^3.1.7",
+    "@playwright/test": "^1.28.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.1",
+    "@shoelace-style/shoelace": "^2.0.0-beta.85",
+    "@storybook/addon-actions": "^6.5.14",
+    "@storybook/addon-docs": "^6.5.14",
+    "@storybook/addon-essentials": "^6.5.14",
     "@storybook/addon-knobs": "^6.4.0",
-    "@storybook/addon-links": "^6.5.10",
-    "@storybook/builder-webpack5": "^6.5.10",
-    "@storybook/manager-webpack5": "^6.5.10",
+    "@storybook/addon-links": "^6.5.14",
+    "@storybook/builder-webpack5": "^6.5.14",
+    "@storybook/manager-webpack5": "^6.5.14",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/web-components": "^6.5.10",
-    "@types/bootstrap": "^5.2.4",
-    "@web/dev-server": "^0.1.17",
-    "@web/dev-server-esbuild": "^0.3.2",
+    "@storybook/web-components": "^6.5.14",
+    "@types/bootstrap": "^5.2.6",
+    "@web/dev-server": "^0.1.35",
+    "@web/dev-server-esbuild": "^0.3.3",
     "@web/dev-server-rollup": "^0.3.19",
     "@web/dev-server-storybook": "^0.5.4",
-    "@web/test-runner": "^0.14.0",
+    "@web/test-runner": "^0.15.0",
     "@web/test-runner-commands": "^0.6.5",
-    "@web/test-runner-playwright": "^0.8.10",
-    "autoprefixer": "^10.4.8",
-    "babel-loader": "^8.2.5",
+    "@web/test-runner-playwright": "^0.9.0",
+    "autoprefixer": "^10.4.13",
+    "babel-loader": "^9.1.0",
     "cz-conventional-changelog": "^3.3.0",
-    "esbuild-sass-plugin": "^2.3.2",
-    "husky": "^8.0.0",
-    "postcss": "^8.2.13",
-    "rollup": "^2.46.0",
+    "esbuild-sass-plugin": "^2.4.3",
+    "husky": "^8.0.2",
+    "postcss": "^8.4.19",
+    "rollup": "^2.66",
     "rollup-plugin-generate-package-json": "^3.2.0",
-    "rollup-plugin-postcss": "^4.0.0",
-    "rollup-plugin-postcss-lit": "^1.0.1",
-    "rollup-plugin-typescript2": "^0.33.0",
-    "sass": "^1.54.4",
-    "sass-loader": "^13.0.2",
-    "sinon": "^14.0.0",
+    "rollup-plugin-postcss": "^4.0.2",
+    "rollup-plugin-postcss-lit": "^2.0.0",
+    "rollup-plugin-typescript2": "^0.34.1",
+    "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
+    "sinon": "^15.0.0",
     "storybook-addon-web-components-knobs": "^0.3.20",
-    "tslib": "^2.4.0",
-    "typescript": "^4.2.4"
+    "tslib": "^2.4.1",
+    "typescript": "^4.9.3"
   },
   "config": {
     "commitizen": {
