--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "@babel/core": "^7.20.5",
     "@commitlint/cli": "^17.3.0",
     "@commitlint/config-conventional": "^17.3.0",
-    "@esm-bundle/chai": "^4.3.4-fix.0",
+    "@esm-bundle/chai": "^4.3.4",
     "@open-wc/storybook": "^0.2.8",
     "@open-wc/testing": "^3.1.7",
     "@playwright/test": "^1.28.1",
