--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@govtechsg/sgds": "^2.1.1",
+    "@govtechsg/sgds": "^2.1.0-beta.2",
     "bootstrap": "^5.1.3",
     "lit": "^2.3.1"
   },
@@ -35,15 +35,15 @@
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^5.0.0",
     "@shoelace-style/shoelace": "^2.0.0-beta.83",
-    "@storybook/addon-actions": "^6.5.14",
-    "@storybook/addon-docs": "^6.5.14",
-    "@storybook/addon-essentials": "^6.5.14",
+    "@storybook/addon-actions": "^6.5.10",
+    "@storybook/addon-docs": "^6.5.10",
+    "@storybook/addon-essentials": "^6.5.10",
     "@storybook/addon-knobs": "^6.4.0",
-    "@storybook/addon-links": "^6.5.14",
-    "@storybook/builder-webpack5": "^6.5.14",
-    "@storybook/manager-webpack5": "^6.5.14",
+    "@storybook/addon-links": "^6.5.10",
+    "@storybook/builder-webpack5": "^6.5.10",
+    "@storybook/manager-webpack5": "^6.5.10",
     "@storybook/preset-scss": "^1.0.3",
-    "@storybook/web-components": "^6.5.14",
+    "@storybook/web-components": "^6.5.10",
     "@types/bootstrap": "^5.2.4",
     "@web/dev-server": "^0.1.17",
     "@web/dev-server-esbuild": "^0.3.2",
@@ -69,9 +69,6 @@
     "storybook-addon-web-components-knobs": "^0.3.20",
     "tslib": "^2.4.0",
     "typescript": "^4.2.4"
-  },
-  "overrides": {
-    "enhanced-resolve": "5.12.0"
   },
   "config": {
     "commitizen": {
