--- a/package.json
+++ b/package.json
@@ -24,6 +24,10 @@
     "bootstrap": "^5.1.3",
     "lit": "^2.3.1"
   },
+  "engines": {
+    "node": "<=16.x.x",
+    "npm": ">=8.0.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.18.13",
     "@commitlint/cli": "^17.1.2",
