--- a/package.json
+++ b/package.json
@@ -20,13 +20,10 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "@govtechsg/sgds": "^2.1.0-beta.2",
+    "@govtechsg/sgds": "^2.1.1",
     "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.9.1",
     "lit": "^2.3.1"
-  },
-  "engines": {
-    "node": "<=16.x.x",
-    "npm": ">=8.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
@@ -35,9 +32,7 @@
     "@esm-bundle/chai": "^4.3.4-fix.0",
     "@open-wc/storybook": "^0.2.8",
     "@open-wc/testing": "^3.0.0-next.5",
-    "@playwright/test": "^1.27.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
-    "@rollup/plugin-replace": "^5.0.0",
     "@shoelace-style/shoelace": "^2.0.0-beta.83",
     "@storybook/addon-actions": "^6.5.10",
     "@storybook/addon-docs": "^6.5.10",
@@ -54,7 +49,6 @@
     "@web/dev-server-rollup": "^0.3.19",
     "@web/dev-server-storybook": "^0.5.4",
     "@web/test-runner": "^0.14.0",
-    "@web/test-runner-commands": "^0.6.5",
     "@web/test-runner-playwright": "^0.8.10",
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
