test(icon): spike icon component

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "noImplicitAny": false,
     "importHelpers": true,
     "rootDir": "src",
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "**/*.ts",
