--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "license": "MIT",
   "dependencies": {
     "@govtechsg/sgds": "^2.1.1",
+    "@shoelace-style/shoelace": "^2.3.0",
     "bootstrap": "^5.1.3",
     "lit": "^2.3.1"
   },
@@ -34,11 +35,10 @@
     "@playwright/test": "^1.27.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
     "@rollup/plugin-replace": "^5.0.0",
-    "@shoelace-style/shoelace": "^2.0.0-beta.83",
     "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-controls": "^6.5.16",
     "@storybook/addon-docs": "^6.5.16",
     "@storybook/addon-essentials": "^6.5.16",
-    "@storybook/addon-controls": "^6.5.16",
     "@storybook/addon-links": "^6.5.16",
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
@@ -59,6 +59,7 @@
     "husky": "^8.0.0",
     "postcss": "^8.2.13",
     "rollup": "^2.46.0",
+    "rollup-plugin-copy": "^3.4.0",
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-postcss-lit": "^1.0.1",
