--- a/package.json
+++ b/package.json
@@ -79,6 +79,7 @@
     "gulp-concat": "^2.6.1",
     "husky": "^8.0.0",
     "postcss": "^8.2.13",
+    "prettier": "^2.8.7",
     "rollup": "^2.46.0",
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-postcss": "^4.0.0",
