build(rollup): separate out production and dev config

--- a/package.json
+++ b/package.json
@@ -6,15 +6,16 @@
   "module": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "build": "rm -rf lib && rollup --config rollup.config.js",
+    "build:dev": "rm -rf lib && rollup --config rollup.dev.config.js",
+    "build:prod": "rm -rf lib && rollup --config rollup.config.js",
     "build:react": "cem analyze --litelement && node ./scripts/makeReact.mjs",
     "post:build": "node ./scripts/frankBuild.js",
-    "build:lib": "npm run build:react && npm run build && npm run post:build",
-    "build:watch": "npm run build -- --watch",
+    "build:lib": "npm run build:react && npm run build:prod && npm run post:build",
+    "build:watch": "npm run build:dev -- --watch",
     "dev": "npm run build:watch & npm run serve",
     "serve": "wds --watch --open",
     "test": "rm -rf test-outdir && rollup --config rollup.test.config.js && web-test-runner",
-    "storybook": "npm run build && start-storybook -p 6006",
+    "storybook": "npm run build:dev && start-storybook -p 6006",
     "build-storybook": "rm -rf lib && npm run build && build-storybook",
     "prepare": "husky install",
     "build:readme" : "gulp"
