docs(accordion): add jsdocs for accordion

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,20 @@
         "activityBar.background": "#203220",
         "titleBar.activeBackground": "#2C452D",
         "titleBar.activeForeground": "#FAFCFA"
+    },
+    "todo-tree.highlights.customHighlight": {
+        "TODO": {
+            "icon": "check",
+            "type": "line",
+            "iconColour": "yellow",
+            "foreground": "red",
+            "background": "yellow"
+        },
+        "FIXME": {
+            "icon": "beaker",
+            "iconColour": "red",
+            "foreground": "white",
+            "background": "red"
+        }
     }
 }
