--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "dev": "npm run build:watch & npm run serve",
     "serve": "wds --watch --open",
     "test": "rm -rf test-outdir && rollup --config rollup.test.config.js && web-test-runner",
-    "test:scripts": "wtr scripts/__tests__/**/*.test.js",
+    "test:scripts": "wtr scripts/__tests__/**/*.test.js --node-resolve",
     "storybook": "npm run build:dev && start-storybook -p 6006",
     "build-storybook": "rm -rf lib && npm run build && build-storybook",
     "prepare": "husky install",
-    "build:readme" : "gulp"
+    "build:readme": "gulp"
   },
   "author": "GovTechSG",
   "contributors": [
@@ -80,6 +80,7 @@
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "husky": "^8.0.0",
+    "lodash": "^4.17.21",
     "postcss": "^8.2.13",
     "prettier": "^2.8.7",
     "rollup": "^2.46.0",
