--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "scripts": {
     "build:dev": "rm -rf lib && rollup --config rollup.dev.config.js",
     "build:prod": "rm -rf lib && rollup --config rollup.config.js",
-    "build:react": "cem analyze --litelement && node ./scripts/makeReact.mjs",
+    "build:react": "npm run cem && node ./scripts/makeReact.mjs",
     "post:build": "node ./scripts/frankBuild.js",
     "build:lib": "npm run build:react && npm run build:prod && npm run post:build",
     "build:watch": "npm run build:dev -- --watch",
@@ -16,14 +16,16 @@
     "serve": "wds --watch --open",
     "test": "rm -rf test-outdir && rollup --config rollup.test.config.js && web-test-runner",
     "test:scripts": "wtr scripts/__tests__/**/*.test.js --node-resolve",
-    "storybook": "npm run build:dev && start-storybook -p 6006",
+    "storybook": "npm run build:stories && npm run build:dev && start-storybook -p 6006",
     "build-storybook": "rm -rf lib && npm run build && build-storybook",
     "prepare": "husky install",
-    "build:readme": "gulp",
-    "build:stories": "node ./scripts/generateStories.mjs",
+    "build:readme": "gulp build-readme",
+    "build:stories": "npm run cem && node ./scripts/generateStories.mjs && npm run concat:stories",
+    "concat:stories": "gulp concat-storybook-mdx",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts .",
-    "lint:fix": "npm run lint -- --fix"
+    "lint:fix": "npm run lint -- --fix",
+    "cem": "cem analyze --litelement "
   },
   "author": "GovTechSG",
   "contributors": [
@@ -49,6 +51,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
+    "@babel/preset-env": "^7.21.4",
+    "@babel/register": "^7.21.0",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
     "@custom-elements-manifest/analyzer": "^0.6.4",
