--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,7 @@ frontend:
         - rm -rf node_modules && npm ci
     build:
       commands:
-        - npm run test && npm run build-storybook
+        - npm run test && npm run test:scripts && npm run build-storybook
   artifacts:
     baseDirectory: /storybook-static
     files:
