--- a/package.json
+++ b/package.json
@@ -9,18 +9,18 @@
     "build:dev": "rm -rf lib && rollup --config rollup.dev.config.js",
     "build:prod": "rm -rf lib && rollup --config rollup.config.js",
     "build:react": "npm run cem && node ./scripts/makeReact.mjs",
-    "post:build": "node ./scripts/frankBuild.js",
+    "build:readme": "gulp build-readme",
+    "build:stories": "npm run cem && node ./scripts/generateStories.mjs && npm run concat:stories",
     "build:lib": "npm run build:react && npm run build:prod && npm run post:build",
     "build:watch": "npm run build:dev -- --watch",
+    "post:build": "node ./scripts/frankBuild.js",
     "dev": "npm run build:watch & npm run serve",
     "serve": "wds --watch --open",
     "test": "rm -rf test-outdir && rollup --config rollup.test.config.js && web-test-runner",
     "test:scripts": "wtr scripts/__tests__/**/*.test.js --node-resolve",
     "storybook": "npm run build:stories && npm run build:dev && start-storybook -p 6006",
-    "build-storybook": "rm -rf lib && npm run build && build-storybook",
+    "build-storybook": "rm -rf lib && npm run build:dev && npm run build:stories && build-storybook",
     "prepare": "husky install",
-    "build:readme": "gulp build-readme",
-    "build:stories": "npm run cem && node ./scripts/generateStories.mjs && npm run concat:stories",
     "concat:stories": "gulp concat-storybook-mdx",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts .",
