chore(*): clean up and documentating contributing.md

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,8 +4,8 @@
     "module": "es2015",
     "moduleResolution": "node",
     "lib": ["es2017", "dom", "dom.iterable"],
-    // "declaration": true,
-    // "declarationDir": "lib",
+    "declaration": true,
+    "declarationDir": "lib",
     "sourceMap": true,
     "inlineSources": true,
     "experimentalDecorators": true,
