--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -21,5 +21,5 @@
     "lit/binding-positions": 0
     // "jsx-quotes": [2, "prefer-single"],
   },
-  "ignorePatterns": ["**/*.js", "mocks"]
+  "ignorePatterns": ["**/*.js", "mocks", "**/*.mjs"]
 }
