--- a/package.json
+++ b/package.json
@@ -6,11 +6,11 @@
   "module": "lib/index.js",
   "typings": "lib/index.d.ts",
   "scripts": {
-    "build:dev": "rm -rf lib && rollup --config rollup.dev.config.js",
-    "build:prod": "rm -rf lib && rollup --config rollup.config.js",
+    "build:dev": "rm -rf lib && rollup --config rollup.config.js --environment NODE_ENV:development",
+    "build:prod": "rm -rf lib && rollup --config rollup.config.js --environment NODE_ENV:production",
     "build:react": "npm run cem && node ./scripts/makeReact.mjs",
     "build:readme": "gulp build-readme",
-    "build:stories": "npm run cem && node ./scripts/generateStories.mjs && npm run concat:stories",
+    "write:stories": "npm run cem && node ./scripts/generateStories.mjs && npm run concat:stories",
     "build:lib": "npm run build:react && npm run build:prod && npm run post:build",
     "build:watch": "npm run build:dev -- --watch",
     "post:build": "node ./scripts/frankBuild.js",
@@ -18,8 +18,8 @@
     "serve": "wds --watch --open",
     "test": "rm -rf test-outdir && rollup --config rollup.test.config.js && web-test-runner",
     "test:scripts": "wtr scripts/__tests__/**/*.test.js --node-resolve",
-    "storybook": "npm run build:stories && npm run build:dev && start-storybook -p 6006",
-    "build-storybook": "rm -rf lib && npm run build:dev && npm run build:stories && build-storybook",
+    "storybook": "npm run write:stories && npm run build:dev && start-storybook -p 6006",
+    "build-storybook": "rm -rf lib && npm run build:dev && npm run write:stories && build-storybook",
     "prepare": "husky install",
     "concat:stories": "gulp concat-storybook-mdx",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
