build(storybook): enable reload of storybook when templates change

--- a/package.json
+++ b/package.json
@@ -18,8 +18,8 @@
     "serve": "wds --watch --open",
     "test": "rm -rf test-outdir && rollup --config rollup.test.config.js && web-test-runner",
     "test:scripts": "wtr scripts/__tests__/**/*.test.js --node-resolve",
-    "storybook": "npm run write:stories && npm run build:dev && start-storybook -p 6006",
-    "build-storybook": "rm -rf lib && npm run build:dev && npm run write:stories && build-storybook",
+    "storybook": "npm run build:dev && nodemon --exec \"npm run write:stories &&  start-storybook -p 6006\" --watch stories/templates stories/getting-started -e js,mdx",
+    "build-storybook": "npm run build:dev && npm run write:stories && build-storybook",
     "prepare": "husky install",
     "concat:stories": "gulp concat-storybook-mdx",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
@@ -100,6 +100,7 @@
     "gulp-mustache": "^5.0.0",
     "husky": "^8.0.0",
     "lodash": "^4.17.21",
+    "nodemon": "^2.0.22",
     "postcss": "^8.2.13",
     "prettier": "^2.8.7",
     "rollup": "^2.46.0",
