--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "build:react": "npm run cem && node ./scripts/makeReact.mjs",
     "build:readme": "gulp build-readme",
     "write:stories": "npm run cem && node ./scripts/generateStories.mjs && npm run concat:stories",
+    "write:component": "plop",
     "build:lib": "npm run build:react && npm run build:prod && npm run post:build",
     "build:watch": "npm run build:dev -- --watch",
     "post:build": "node ./scripts/frankBuild.js",
@@ -101,6 +102,7 @@
     "husky": "^8.0.0",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.22",
+    "plop": "^3.1.2",
     "postcss": "^8.2.13",
     "prettier": "^2.8.7",
     "rollup": "^2.46.0",
