--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "cem-plugin-better-lit-types": "^0.2.0",
     "cz-conventional-changelog": "^3.3.0",
     "del": "^7.0.0",
+    "dotenv": "^16.0.3",
     "esbuild-sass-plugin": "^2.3.2",
     "eslint": "^8.38.0",
     "eslint-config-standard-with-typescript": "^34.0.1",
