--- a/amplify.yml
+++ b/amplify.yml
@@ -6,7 +6,8 @@ frontend:
         - rm -rf node_modules && npm ci
     build:
       commands:
-        - npm run test && npm run test:scripts && npm run build-storybook:$BUILD_ENV
+        - STORIES_TO_BUILD=${STORIES_TO_BUILD}
+        - npm run test && npm run test:scripts && npm run build-storybook
         - echo "TWITCH_CLIENT_ID=$TWITCH_CLIENT_ID" >> frontend/.env
   artifacts:
     baseDirectory: /storybook-static
