--- a/amplify.yml
+++ b/amplify.yml
@@ -8,7 +8,7 @@ frontend:
       commands:
         - STORIES_TO_BUILD=${STORIES_TO_BUILD}
         - npm run test && npm run test:scripts && npm run build-storybook
-        - echo "TWITCH_CLIENT_ID=$TWITCH_CLIENT_ID" >> frontend/.env
+        - echo "TWITCH_CLIENT_ID=$TWITCH_CLIENT_ID" >> .env
   artifacts:
     baseDirectory: /storybook-static
     files:
