--- a/package.json
+++ b/package.json
@@ -99,6 +99,7 @@
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
     "gulp-mustache": "^5.0.0",
+    "gulp-order": "^1.2.0",
     "husky": "^8.0.0",
     "lodash": "^4.17.21",
     "nodemon": "^2.0.22",
