--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   "dependencies": {
     "@govtechsg/sgds": "^2.1.1",
     "@lit-labs/react": "^1.0.9",
+    "@open-wc/scoped-elements": "^2.2.0",
+    "@webcomponents/scoped-custom-element-registry": "^0.0.9",
     "bootstrap": "^5.1.3",
     "lit": "^2.3.1"
   },
