build(*): add visualizer for final lib

--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "cem-plugin-better-lit-types": "^0.2.0",
+    "copy-webpack-plugin": "^11.0.0",
     "cz-conventional-changelog": "^3.3.0",
     "del": "^7.0.0",
     "esbuild-sass-plugin": "^2.3.2",
@@ -113,7 +114,9 @@
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-postcss-lit": "^1.0.1",
+    "rollup-plugin-scss": "^3.0.0",
     "rollup-plugin-typescript2": "^0.33.0",
+    "rollup-plugin-visualizer": "^5.9.2",
     "sass": "^1.54.4",
     "sass-loader": "^13.0.2",
     "sinon": "^14.0.0",
