build(*): use conditional exports to encapsulate other folders

--- a/package.json
+++ b/package.json
@@ -128,5 +128,13 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
+  },
+  "exports": {
+    ".": "./index.js",
+    "./components": "./components/index.js",
+    "./components/*": "./components/*",
+    "./react/*": "./react/*",
+    "./base/*": null,
+    "./utils/*": null
   }
 }
