--- a/package.json
+++ b/package.json
@@ -2,21 +2,21 @@
   "name": "@govtechsg/sgds-web-component",
   "version": "1.0.0-rc.3",
   "description": "",
+  "main": "lib/index.js",
+  "module": "lib/index.js",
+  "typings": "lib/index.d.ts",
   "scripts": {
-    "dev": "vite",
-    "build:dev": "rm -rf lib && rollup --config rollup.config.mjs --environment NODE_ENV:development",
-    "build:prod": "rm -rf lib && rollup --config rollup.config.mjs --environment NODE_ENV:production",
+    "dev": "VITE_ENV=development vite",
+    "preview": "VITE_ENV=production vite",
+    "build": "npm run build:react && rm -rf lib && rollup --config rollup.config.mjs && node ./scripts/frankBuild.js",
     "build:react": "npm run cem && node ./scripts/makeReact.mjs",
     "build:readme": "gulp build-readme",
     "write:stories": "npm run cem && node ./scripts/generateStories.mjs && npm run concat:stories",
     "write:component": "plop",
-    "build:lib": "npm run build:react && npm run build:prod && npm run post:build",
-    "build:watch": "npm run build:dev -- --watch",
-    "post:build": "node ./scripts/frankBuild.js",
     "test": "rm -rf test-outdir && rollup --config rollup.test.config.js && web-test-runner",
     "test:scripts": "wtr scripts/__tests__/**/*.test.js --node-resolve",
-    "storybook": "npm run build:dev && nodemon --exec \"npm run write:stories &&  STORYBOOK_ENV=development start-storybook -p 6006\" --watch stories/templates stories/getting-started -e js,mdx",
-    "build-storybook": "npm run build:dev && npm run write:stories && STORYBOOK_ENV=production build-storybook",
+    "storybook": "npm run build && nodemon --exec \"npm run write:stories &&  STORYBOOK_ENV=development start-storybook -p 6006\" --watch stories/templates stories/getting-started -e js,mdx",
+    "build-storybook": "npm run build && npm run write:stories && STORYBOOK_ENV=production build-storybook",
     "prepare": "husky install",
     "concat:stories": "gulp concat-storybook-mdx",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
@@ -46,8 +46,7 @@
     "@open-wc/scoped-elements": "^2.2.0",
     "@webcomponents/scoped-custom-element-registry": "^0.0.9",
     "bootstrap": "^5.1.3",
-    "lit": "^2.3.1",
-    "vite": "^4.4.9"
+    "lit": "^2.3.1"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
@@ -117,7 +116,7 @@
     "storybook-addon-web-components-knobs": "^0.3.20",
     "tslib": "^2.4.0",
     "typescript": "^5.0.4",
-    "vite-plugin-dts": "^3.6.0"
+    "vite": "^4.4.9"
   },
   "config": {
     "commitizen": {
