--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "@open-wc/scoped-elements": "^2.2.0",
     "@webcomponents/scoped-custom-element-registry": "^0.0.9",
     "bootstrap": "^5.1.3",
-    "lit": "^2.3.1"
+    "lit": "^2.3.1",
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
     "@babel/core": "^7.18.13",
@@ -118,7 +119,6 @@
     "sass-loader": "^13.0.2",
     "sinon": "^14.0.0",
     "storybook-addon-web-components-knobs": "^0.3.20",
-    "tslib": "^2.4.0",
     "typescript": "^5.0.4"
   },
   "config": {
