--- a/.github/workflows/publish-pr.yml
+++ b/.github/workflows/publish-pr.yml
@@ -20,7 +20,7 @@ jobs:
           registry-url: 'https://registry.npmjs.org'
       - run: npm ci
       - run: npm run test
-      - run: npm run build:lib
+      - run: npm run build
       - run: npm publish --tag alpha ./lib
         if: contains(env.NPM_TAG, 'alpha')
       - run: npm publish --tag beta ./lib
