--- a/package.json
+++ b/package.json
@@ -85,6 +85,7 @@
     "babel-loader": "^8.2.5",
     "cem-plugin-better-lit-types": "^0.2.0",
     "cypress": "^13.6.0",
+    "cypress-fail-on-console-error": "^5.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "del": "^7.0.0",
     "esbuild-sass-plugin": "^2.3.2",
