--- a/cypress/apps/angular-app/package.json
+++ b/cypress/apps/angular-app/package.json
@@ -18,6 +18,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.4",
     "@angular/router": "^17.0.0",
+    "@govtechsg/sgds": "^2.1.1",
     "@govtechsg/sgds-web-component": "file:../../../lib",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
