--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts .",
     "lint:fix": "npm run lint -- --fix",
-    "cem": "cem analyze --litelement "
+    "cem": "cem analyze --litelement ",
+    "e2e-test": "node cypress/scripts/run_all.js & cypress open"
   },
   "author": "GovTechSG",
   "contributors": [
@@ -84,6 +85,8 @@
     "autoprefixer": "^10.4.8",
     "babel-loader": "^8.2.5",
     "cem-plugin-better-lit-types": "^0.2.0",
+    "cypress": "^13.6.0",
+    "cypress-fail-on-console-error": "^5.0.3",
     "cz-conventional-changelog": "^3.3.0",
     "del": "^7.0.0",
     "esbuild-sass-plugin": "^2.3.2",
