--- a/package.json
+++ b/package.json
@@ -71,6 +71,7 @@
     "@storybook/builder-webpack5": "^6.5.16",
     "@storybook/manager-webpack5": "^6.5.16",
     "@storybook/preset-scss": "^1.0.3",
+    "@storybook/theming": "^7.6.7",
     "@storybook/web-components": "^6.5.16",
     "@types/bootstrap": "^5.2.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
