--- a/package.json
+++ b/package.json
@@ -45,9 +45,9 @@
     "@govtechsg/sgds": "^2.1.1",
     "@lit-labs/react": "^1.0.9",
     "@open-wc/scoped-elements": "^2.2.0",
-    "@webcomponents/scoped-custom-element-registry": "^0.0.9",
     "bootstrap": "^5.1.3",
     "date-fns": "^3.3.1",
+    "imask": "^7.4.0",
     "lit": "^2.3.1",
     "tslib": "^2.6.2"
   },
@@ -75,6 +75,7 @@
     "@storybook/theming": "^7.6.7",
     "@storybook/web-components": "^6.5.16",
     "@types/bootstrap": "^5.2.6",
+    "@types/inputmask": "^5.0.7",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@web/dev-server": "^0.1.17",
