chore(*): remove unused packages using lit-html

--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "write:component": "plop",
     "test": "rm -rf test-outdir && rollup --config rollup.test.config.js && web-test-runner",
     "test:scripts": "wtr scripts/__tests__/**/*.test.js --node-resolve",
-    "storybook": "npm run build && nodemon --exec \"npm run write:stories &&  STORYBOOK_ENV=development start-storybook -p 6006\" --watch stories/templates stories/getting-started -e js,mdx",
+    "storybook": "nodemon --exec \"npm run write:stories &&  STORYBOOK_ENV=development start-storybook -p 6006\" --watch stories/templates stories/getting-started -e js,mdx",
     "build-storybook": "npm run build && npm run write:stories && STORYBOOK_ENV=production build-storybook",
     "prepare": "husky install",
     "concat:stories": "gulp concat-storybook-mdx",
@@ -59,7 +59,6 @@
     "@commitlint/config-conventional": "^17.1.0",
     "@custom-elements-manifest/analyzer": "^0.6.4",
     "@esm-bundle/chai": "^4.3.4-fix.0",
-    "@open-wc/storybook": "^0.2.8",
     "@open-wc/testing": "^3.0.0-next.5",
     "@playwright/test": "^1.27.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
@@ -102,7 +101,6 @@
     "eslint-plugin-wc": "^1.4.0",
     "gulp": "^4.0.2",
     "gulp-concat": "^2.6.1",
-    "gulp-mustache": "^5.0.0",
     "gulp-order": "^1.2.0",
     "husky": "^8.0.0",
     "lodash": "^4.17.21",
@@ -119,7 +117,6 @@
     "sass": "~1.49.9",
     "sass-loader": "^13.0.2",
     "sinon": "^14.0.0",
-    "storybook-addon-web-components-knobs": "^0.3.20",
     "typescript": "^5.0.4",
     "vite": "^4.4.9"
   },
