--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
   "license": "MIT",
   "dependencies": {
     "@govtechsg/sgds": "^2.3.0",
-    "@lit-labs/react": "^1.0.9",
+    "@lit/react": "^1.0.5",
     "@open-wc/scoped-elements": "^2.2.0",
     "bootstrap": "^5.1.3",
     "date-fns": "^3.3.1",
