--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@storybook/theming": "^7.6.7",
     "@storybook/web-components": "^6.5.16",
     "@types/bootstrap": "^5.2.6",
+    "@types/mocha": "^10.0.6",
     "@typescript-eslint/eslint-plugin": "^5.59.0",
     "@typescript-eslint/parser": "^5.59.0",
     "@web/dev-server": "^0.1.17",
