--- a/amplify.yml
+++ b/amplify.yml
@@ -4,6 +4,7 @@ frontend:
     preBuild:
       commands:
         - rm -rf node_modules && npm ci
+        - npx playwright install
     build:
       commands:
         - npm run test && npm run test:scripts && npm run build-storybook
