--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@commitlint/config-conventional": "^17.1.0",
     "@custom-elements-manifest/analyzer": "^0.6.4",
     "@esm-bundle/chai": "^4.3.4-fix.0",
+    "@mdx-js/react": "^1.6.22",
     "@open-wc/testing": "^3.0.0-next.5",
     "@playwright/test": "^1.27.0",
     "@rollup/plugin-node-resolve": "^11.2.1",
@@ -126,5 +127,12 @@
     "commitizen": {
       "path": "./node_modules/cz-conventional-changelog"
     }
-  }
+  },
+  "overrides": {
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0",
+    "@storybook/addon-docs": {
+        "@mdx-js/react": "1.6.22"
+    }
+}
 }
