--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "postcss": "^8.2.13",
     "prettier": "^2.8.7",
     "rollup": "^2.79.1",
+    "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-generate-package-json": "^3.2.0",
     "rollup-plugin-postcss": "^4.0.0",
     "rollup-plugin-postcss-lit": "^2.1.0",
