refactor(*): remove css @import rule and transfer to js import

--- a/cypress/apps/react-app/package.json
+++ b/cypress/apps/react-app/package.json
@@ -3,7 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "root": "file:../../../root.css",
     "@govtechsg/sgds-web-component": "file:../../../lib",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -38,6 +37,7 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
+    "@webcomponents/scoped-custom-element-registry": "^0.0.9"
   }
 }
