--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "@govtechsg/sgds": "^2.3.2",
     "@lit-labs/react": "^1.0.9",
     "@open-wc/scoped-elements": "^3.0.5",
+    "@storybook/addon-a11y": "^8.2.8",
     "bootstrap": "^5.1.3",
     "date-fns": "^3.3.1",
     "imask": "^7.4.0",
@@ -108,7 +109,6 @@
     "plop": "^3.1.2",
     "postcss": "^8.2.13",
     "prettier": "^2.8.7",
-    "remark-gfm": "^4.0.0",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-generate-package-json": "^3.2.0",
