docs(*): add troublshotting

--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@rollup/plugin-replace": "^5.0.0",
     "@storybook/addon-essentials": "^8.2.6",
     "@storybook/addon-links": "^8.2.6",
+    "@storybook/addon-mdx-gfm": "^8.2.8",
     "@storybook/blocks": "^8.2.7",
     "@storybook/test": "^8.2.6",
     "@storybook/web-components": "^8.2.6",
@@ -109,6 +110,7 @@
     "plop": "^3.1.2",
     "postcss": "^8.2.13",
     "prettier": "^2.8.7",
+    "remark-gfm": "^4.0.0",
     "rollup": "^2.79.1",
     "rollup-plugin-copy": "^3.5.0",
     "rollup-plugin-generate-package-json": "^3.2.0",
