docs(*): additional mdx wip

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "build": "npm run build:react && rm -rf lib && rollup --config rollup.config.mjs && node ./scripts/frankBuild.js",
     "build:react": "npm run cem && node ./scripts/makeReact.mjs",
     "build:readme": "gulp build-readme",
-    "write:stories": "npm run cem && node ./scripts/generateStories.mjs",
+    "write:stories": "npm run cem && node ./scripts/generateStories.mjs && npm run concat:stories",
     "write:component": "plop",
     "test": "rm -rf test-outdir && rollup --config rollup.test.config.js && web-test-runner",
     "test:scripts": "wtr scripts/__tests__/**/*.test.js --node-resolve",
