--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "test": "rm -rf test-outdir && rollup --config rollup.test.config.js && web-test-runner",
     "test:scripts": "wtr scripts/__tests__/**/*.test.js --node-resolve",
     "prepare": "husky install",
-    "concat:stories": "gulp concat-storybook-mdx",
+    "concat:stories": "gulp concat-stories-js && gulp concat-storybook-mdx",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "lint": "eslint --ignore-path .gitignore --ext .js,.ts .",
     "lint:fix": "npm run lint -- --fix",
