chore(*): dx plus poc

--- a/cypress/apps/angular-app/package.json
+++ b/cypress/apps/angular-app/package.json
@@ -18,8 +18,7 @@
     "@angular/platform-browser": "^17.0.0",
     "@angular/platform-browser-dynamic": "^17.0.4",
     "@angular/router": "^17.0.0",
-    "@govtechsg/sgds": "^2.1.1",
-    "@govtechsg/sgds-web-component": "file:../../../lib",
+    "@govtechsg/sgds-web-component": "2.0.0-rc.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.2"
