ci(gist): update gist actions

--- a/.github/workflows/sync-to-gist.yml
+++ b/.github/workflows/sync-to-gist.yml
@@ -5,7 +5,7 @@ on:
       - '3.0.0-alpha' 
       - 'lab'
 jobs:
-  Root-Gist:
+  Theme-Gist:
     runs-on: ubuntu-latest
     steps:
         - name: Checkout
@@ -15,4 +15,4 @@ jobs:
           with:
             gist_token: ${{ secrets.GIST_TOKEN }}
             gist_id: 425e29332ec837d9ea4bbe90ff8d4a37
-            source_path: ./src/themes/root.css
+            source_path: ./src/themes
