test(react): replace corrupted react app on cypress

--- a/cypress/apps/react-app/package.json
+++ b/cypress/apps/react-app/package.json
@@ -1,11 +1,12 @@
 {
-  "name": "react-app",
+  "name": "my-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@govtechsg/sgds-web-component": "file:../../../lib",
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^16.3.0",
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -13,7 +14,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "BROWSER=none react-scripts start HOST=127.0.0.1 PORT=3000",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -35,8 +36,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-private-property-in-object": "^7.21.11"
   }
 }
